--- a/community_and_resources/templates/community.html
+++ b/community_and_resources/templates/community.html
@@ -39,83 +39,41 @@
         </div>
 
             <div class="col-lg-4">
-          <div class="card mb-2">
-            <div class="card-body background">
-              <h5 class="card-title">Groups</h5>
-              <p class="card-text">The links below will take you to Messenger groups at the hall for those with certain interests or areas of study.
-                Even if you only have a small interest in a certain topic, please join the group and get involved!
-                Academic groups will be restricted to those in that area of study, please utilise them to help each other learn, organise groups studies, etc.
-                You can also find links to Turner Hall's social media, in case you haven't joined us yet.<p>
-              <div class="card" style="max-height: 400px;overflow-y: auto">
-                <div id="accordion">
-                    <div class="card-header background_dark" id="headingFive">
-                      <h5 class="mb-0">
-                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        <span class="fas fa-home"></span> Hall
-                      </button>
-                    </h5>
-                  </div>
-                  <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
-                    <div class="card-body">
-                      <ul class="list-group">
-                        <li class="list-group-item"><a target="_blank" href="#">Tiger Town Facebook</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">The Jungle Facebook</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">1 East</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">1 West</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">2 East</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">2 West</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">3 East</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">3 West</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">4 East</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">4 West</a></li>
-                      </ul>
+              <h2>Next Event</h2>
+              <div class="card">
+                    {% if event.group_running == 'HS' %}
+                        <div class="padding10 hall-society">
+                    {% elif event.group_running == 'RST' %}
+                        <div class="padding10 rst">
+                    {% elif event.group_running == 'MRS' %}
+                        <div class="padding10 mrs">
+                    {% elif event.group_running == 'MSPT' %}
+                        <div class="padding10 monash-sport">
+                    {% elif event.group_running == 'STO' %}
+                        <div class="padding10 rst-only">
+                    {% else %}
+                        <div class="padding10">
+                    {% endif %}
+                        <img src="{{ event.poster.url }}" class="card-img-top scale-img" alt="{{ event.name }} poster">
                     </div>
-                  </div>
-                    <div class="card-header background_dark" id="headingOne">
-                      <h5 class="mb-0">
-                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        <span class="fas fa-heart"></span> Interest
-                      </button>
-                    </h5>
-                  </div>
-                  <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body">
-                      <ul class="list-group">
-                        <li class="list-group-item"><a target="_blank" href="#">Sport</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Music</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Art</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Video Games</a></li>
-                      </ul>
+                    <div class="card-body background">
+                        <h5 class="card-title" href="{% url 'details' event.pk %}">{{ event.name }}</h5>
+                        <p class="card-text">{{ event.start_time_and_date|date:'g:iA l j M Y' }}<br>{{ event.location }}</p>
+                        {% if event.group_running == 'HS' %}
+                            <a href="{% url 'details' event.pk %}" class="btn hs-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                        {% elif event.group_running == 'RST' %}
+                            <a href="{% url 'details' event.pk %}" class="btn rst-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                        {% elif event.group_running == 'MRS' %}
+                            <a href="{% url 'details' event.pk %}" class="btn mrs-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                        {% elif event.group_running == 'MSPT' %}
+                            <a href="{% url 'details' event.pk %}" class="btn m-sport-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                        {% elif event.group_running == 'STO' %}
+                            <a href="{% url 'details' event.pk %}" class="btn rst-only-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                        {% else %}
+                            <a href="{% url 'details' event.pk %}" class="btn btn-outline-dark btn-lg btn-block">Event information</a>
+                        {% endif %}
                     </div>
-                  </div>
-                    <div class="card-header background_dark" id="headingTwo">
-                      <h5 class="mb-0">
-                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <span class="fas fa-landmark"></span> Academic
-                      </button>
-                    </h5>
-                  </div>
-                  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                    <div class="card-body">
-                      <ul class="list-group">
-                        <li class="list-group-item"><a target="_blank" href="#">Arts, humanities and social sciences</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Business</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Education</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Engineering</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Information technology</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Law</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Music, art, design and architecture</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Medicine</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Nursing and health sciences</a></li>
-                        <li class="list-group-item"><a target="_blank" href="#">Science</a></li>
-                      </ul>
-                    </div>
-                  </div>
                 </div>
-              </div>
-              <p class="card-text">Missed an interest or study area? Let us know in the feedback form!</p>
-            </div>
-          </div>
               </div>
           <div class="col-lg-4">
           <div class="card mb-2">
