--- a/tools/templates/slideshow.html
+++ b/tools/templates/slideshow.html
@@ -25,7 +25,7 @@
             {% endfor %}
               {% if events|length < 1 %}
               <div class="carousel-item" style="height: 100%; background-color: #f4a742">
-              <p>No upcoming events this week</p>
+              <h1>No upcoming events this week</h1>
             </div>
               {% endif %}
           </div>
