--- a/tools/templates/tools_index.html
+++ b/tools/templates/tools_index.html
@@ -7,7 +7,7 @@
 {% block body %}
     <div class="container">
         <h2>RA Tools and resources</h2>
-        <a class="btn btn-primary" href="{% url 'slideshow' %}">Launch Slideshow</a>
+        <a class="btn btn-primary" href="{% url 'slideshow' %}">Slideshow</a>
         <a class="btn btn-primary" href="{% url 'slideshow' %}">Manage Tiger Trophy Points</a>
         <a class="btn btn-primary" href="{% url 'slideshow' %}">Manage Events</a>
         <a class="btn btn-primary" href="{% url 'slideshow' %}">Manage your RA profile</a>
